test/src/e2e_vm_tests/test_programs/should_fail/non_payable_non_script_call_with_non_zero_coins/src/other_contract.sw
library other_contract;

abi OtherContract {
    fn non_payable_method();
}
